infra/k8s-dev/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 8m
spec:
  # ingressClassName: nginx
  rules:
    - host: demo.myapp.me
      http:
        paths:
          - pathType: Prefix
            path: /api/users/?(.*)
            backend:
              service:
                name: auth-srv
                port:
                  number: 8080
          - pathType: Prefix
            path: /api/posts/?(.*)
            backend:
              service:
                name: posts-srv
                port:
                  number: 8080
          - pathType: Prefix
            path: /api/graph/?(.*)
            backend:
              service:
                name: posts-srv
                port:
                  number: 8080
#          - pathType: Prefix
#            path: /?(.*)
#            backend:
#              service:
#                name: client-srv
#                port:
#                  number: 3000
